--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <title>Github Finder</title>
+    <title>GitHubFinder</title>
 
     <!-- Bootstrap core CSS -->
     <link href="https://bootswatch.com/4/simplex/bootstrap.min.css" rel="stylesheet">
@@ -16,7 +16,9 @@
 
   <body>
 
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <div class="container">
+      
+     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
       <a class="navbar-brand" href="#">Github Finder</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -29,12 +31,10 @@
       </div>
     </nav>
 
-    <div class="container">
-
       <div class="searchContainer">
-        <h1>Search Github Users</h1>
+        <h1>Search GitHub Users</h1>
         <p class="lead">Enter a username to fetch a user profile and repositories</p>
-        <input type="text" id="searchUser" class="form-control" placeholder="Github Username">
+        <input type="text" id="searchUser" class="form-control" placeholder="GitHub Username">
       </div>
 
       <br><br>
